fix (ambition card textbox): handle overflow

--- a/src/styles/partials/ambition.scss
+++ b/src/styles/partials/ambition.scss
@@ -43,6 +43,7 @@
           display: flex;
           flex-direction: column;
           justify-content: space-evenly;
+          box-sizing: border-box;
           width: 50%;
           height: 60vh;
 
